@@ -12,6 +12,19 @@ module Moneta
         @hash = ::Daybreak::DB.new(options[:file], :serializer => ::Daybreak::Serializer::None)
       end
 
+      # (see Proxy#load)
+      def load(key, options = {})
+        @hash.load if options[:sync]
+        @hash[key]
+      end
+
+      # (see Proxy#store)
+      def store(key, value, options = {})
+        @hash[key] = value
+        @hash.flush if options[:sync]
+        value
+      end
+
       # (see Proxy#increment)
       def increment(key, amount = 1, options = {})
         @hash.lock { super }
