@@ -1,6 +1,7 @@
 master
 
-* Memcached: switched to Dalli by default
+* Adapters::Memcached: switched to Dalli by default
+* Adapters::Daybreak: add option :sync to load and store
 * Transformer: add inspect key transformer
 * Added #create method to atomically create entries
 
